# bookstore-platform

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  books.db  bookstore.db  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1c495c85fab_create_books_table.py  a80aab9aa0d1_initial_schema.py
src/bookstore/: main.py
src/bookstore/api/v1/: auth.py  books.py
src/bookstore/application/services/: book_service.py
src/bookstore/core/: config.py  dependencies.py  exceptions.py  security.py
src/bookstore/db/: database.py
src/bookstore/domain/entities/: book.py
src/bookstore/domain/repositories/: book_repository.py
src/bookstore/infraestructure/repositories/: inmemory_book_repository.py  sql_book_repository.py
src/bookstore/models/: book.py
src/bookstore/ports/repositories/: book_repository.py
src/bookstore/schemas/: book.py
tests/: conftest.py  test_books.py
tests/unit/: test_book_service.py
